[gd_scene load_steps=4 format=3 uid="uid://bawy7io253ooi"]

[ext_resource type="Script" uid="uid://c6x8i3on4hdes" path="res://views/atlas/atlas_second_panel.gd" id="1_0gm6s"]
[ext_resource type="Texture2D" uid="uid://cf1uwiogbuhdj" path="res://assets/sprites/birds/green.png" id="3_2utxs"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0gm6s"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0
content_margin_bottom = 20.0
bg_color = Color(0.297, 0.56835014, 0.9, 1)

[node name="SecondPanel" type="MarginContainer"]
visible = false
offset_right = 1101.0
offset_bottom = 578.0
script = ExtResource("1_0gm6s")

[node name="Intro" type="ColorRect" parent="."]
layout_mode = 2
color = Color(0.9254902, 0.5254902, 0.34509805, 1)

[node name="CommonContainer" type="Control" parent="Intro"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="LevelLabel" type="ColorRect" parent="Intro/CommonContainer"]
layout_mode = 0
offset_right = 250.0
offset_bottom = 50.0
color = Color(0.9999997, 0.7844021, 0.4814062, 1)

[node name="Level" type="Label" parent="Intro/CommonContainer/LevelLabel"]
layout_mode = 0
offset_right = 250.0
offset_bottom = 50.0
theme_override_colors/font_color = Color(0.24851936, 0.26536155, 0.28307673, 1)
theme_override_font_sizes/font_size = 40
text = "fledgling"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginLine" type="ColorRect" parent="Intro/CommonContainer"]
layout_mode = 0
offset_left = 31.0
offset_top = 86.0
offset_right = 159.0
offset_bottom = 214.0
scale = Vector2(2, 2)
color = Color(1, 0.70980394, 0.4509804, 1)

[node name="BirdIcon" type="TextureRect" parent="Intro/CommonContainer/MarginLine"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = -55.0
offset_right = 55.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_2utxs")
expand_mode = 1

[node name="Name" type="Label" parent="Intro/CommonContainer"]
layout_mode = 0
offset_left = -20.0
offset_top = 357.0
offset_right = 351.0
offset_bottom = 454.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 80
text = "Chirpy"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Intro/CommonContainer"]
custom_minimum_size = Vector2(160, 50)
layout_mode = 0
offset_left = 77.0
offset_top = 473.0
offset_right = 237.0
offset_bottom = 523.0
theme_override_constants/separation = 5
alignment = 1

[node name="IntroContainer" type="Control" parent="Intro"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ScrollContainer" type="ScrollContainer" parent="Intro/IntroContainer"]
custom_minimum_size = Vector2(700, 440)
layout_mode = 0
offset_left = 354.0
offset_top = 107.0
offset_right = 1054.0
offset_bottom = 507.0
theme_override_styles/panel = SubResource("StyleBoxFlat_0gm6s")

[node name="DescriptionIntro" type="Label" parent="Intro/IntroContainer/ScrollContainer"]
custom_minimum_size = Vector2(640, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
text = "A lively blue chick that just hatched, full of curiosity and boundless energy. Chirpy loves to communicate through melodious chirps and has an exceptional ear for rhythm. This little songbird can pick up even the most subtle beats and loves to experiment with different musical patterns. Her azure feathers flutter with excitement whenever she hears her favorite tunes."
autowrap_mode = 2

[node name="DescripItem" type="ColorRect" parent="Intro/IntroContainer"]
layout_mode = 0
offset_left = 356.0
offset_top = 38.0
offset_right = 656.0
offset_bottom = 88.0
color = Color(0.9999998, 0.3433319, 0.15803176, 1)

[node name="Description" type="Label" parent="Intro/IntroContainer/DescripItem"]
layout_mode = 0
offset_right = 300.0
offset_bottom = 50.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 40
text = "Description:"
horizontal_alignment = 1
vertical_alignment = 1
